Fixed the colour change on active genre button in filter-page.css. Changed colours for scrollbar (light/dark mdoe). Moved position of x-icon in MovieDetailPage. Added pointer cursor for all clickable elements I could find.

--- a/src/css/cart-page.css
+++ b/src/css/cart-page.css
@@ -52,6 +52,7 @@
 .cartPageMovieImg {
     border-radius: 0.3rem;
     max-width: 92px;
+    cursor: pointer;
 }
 
 .cartPageItemInfo {
