--- a/src/css/movie-detail-page.css
+++ b/src/css/movie-detail-page.css
@@ -20,6 +20,17 @@
     overflow: hidden;
 }
 
+.detailPageXicon {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 1rem;
+    margin-top: -1rem;
+    height: 2rem;
+    width: auto;
+    cursor: pointer;
+}
+
 .detailPageBackdropImg {
     width: 100%;
     height: 100%;
